--- a/spec/files/Gemfile
+++ b/spec/files/Gemfile
@@ -50,12 +50,18 @@ else
   gem 'urbanopt-geojson', '~> 0.3.0'
 end
 
-#if allow_local && File.exists?('../urbanopt-reporting-gem')
-#	gem 'urbanopt-reporting', path: '../urbanotp-reporting-gem'
-#elsif allow_local
-#	gem 'urbanopt-reporting', github: 'URBANopt/urbanopt-reporting-gem', branch: 'develop'
-#else
-	gem 'urbanopt-reporting', '~> 0.2.0'
-#end
+if allow_local && File.exists?('../urbanopt-reporting-gem')
+  gem 'urbanopt-reporting', path: '../urbanotp-reporting-gem'
+elsif allow_local
+  gem 'urbanopt-reporting', github: 'URBANopt/urbanopt-reporting-gem', branch: 'develop'
+else
+  gem 'urbanopt-reporting', '~> 0.2.0'
+end
 
-
+if allow_local && File.exist?('../openstudio-load-flexibility-measures-gem')
+  gem 'openstudio-load-flexibility-measures', path: '../openstudio-load-flexibility-measures-gem'
+elsif allow_local
+  gem 'openstudio-load-flexibility-measures', github: 'NREL/openstudio-load-flexibility-measures-gem', branch: 'master'
+else
+  gem 'openstudio-load-flexibility-measures', '~> 0.1.3'
+end
