--- a/spec/files/Gemfile
+++ b/spec/files/Gemfile
@@ -46,7 +46,7 @@ end
 #if allow_local && File.exist?('../../../urbanopt-reporting-gem')
 #  gem 'urbanopt-reporting', path: '../../../urbanopt-reporting-gem'
 #elsif allow_local
-  gem 'urbanopt-reporting', github: 'URBANopt/urbanopt-reporting-gem', branch: 'adding_units_to_json_reports'
+  gem 'urbanopt-reporting', github: 'URBANopt/urbanopt-reporting-gem', branch: 'develop'
 #else
 #  gem 'urbanopt-reporting', '~> 0.2.0'
 #end
