--- a/spec/files/Gemfile
+++ b/spec/files/Gemfile
@@ -31,7 +31,7 @@ if allow_local && File.exist?('../openstudio-common-measures-gem')
 elsif allow_local
   gem 'openstudio-common-measures', github: 'NREL/openstudio-common-measures-gem', branch: 'develop'
 else
-  gem 'openstudio-common-measures', '~> 0.2.0'
+  gem 'openstudio-common-measures', '0.2.0'
 end
 
 if allow_local && File.exist?('../openstudio-model-articulation-gem')
@@ -46,7 +46,7 @@ end
 #if allow_local && File.exist?('../../../urbanopt-reporting-gem')
 #  gem 'urbanopt-reporting', path: '../../../urbanopt-reporting-gem'
 #elsif allow_local
-  gem 'urbanopt-reporting', github: 'URBANopt/urbanopt-reporting-gem', branch: 'develop'
+  gem 'urbanopt-reporting', github: 'URBANopt/urbanopt-reporting-gem', branch: 'results_bug_fix'
 #else
 #  gem 'urbanopt-reporting', '~> 0.2.0'
 #end
