--- a/spec/files/Gemfile
+++ b/spec/files/Gemfile
@@ -26,13 +26,13 @@ allow_local = ENV['FAVOR_LOCAL_GEMS']
 # end
 #
 
-if allow_local && File.exist?('../../../urbanopt-reporting-gem')
-  gem 'urbanopt-reporting', path: '../../../urbanopt-reporting-gem'
-elsif allow_local
+#if allow_local && File.exist?('../../../urbanopt-reporting-gem')
+#  gem 'urbanopt-reporting', path: '../../../urbanopt-reporting-gem'
+#elsif allow_local
   gem 'urbanopt-reporting', github: 'URBANopt/urbanopt-reporting-gem', branch: 'develop'
-else
-  gem 'urbanopt-reporting', '~> 0.3.2'
-end
+#else
+#  gem 'urbanopt-reporting', '~> 0.3.2'
+#end
 
 if allow_local && File.exist?('../../../openstudio-common-measures-gem')
   gem 'openstudio-common-measures', path: '../../../openstudio-common-measures-gem'
